# mtv-directionality

./: .gitignore  CMakeLists.txt  Makefile  readme.md  rename.sh
config/: Config.hh.in  mtv.sh.in
macros/: OLD_mtv_ibd_100k.mac  mtv_ibd_10.mac  mtv_ibd_100.mac  mtv_ibd_100k.mac  mtv_ibd_10k.mac  mtv_ibd_1M.mac  mtv_ibd_1k.mac  mtv_ibd_20.mac  mtv_ibd_200.mac  mtv_ibd_2k.mac  mtv_ibd_50.mac  mtv_ibd_500.mac  mtv_ibd_5k.mac  scint_ibd_100.mac  vis_qt_mtv.mac
output/mtv_directionality/archive/: parseTruthData.sh  readMCTruthNeutrons.C
ratdb/mtv/: MATERIALS_mtv.ratdb  mtv.geo
src/: CMakeLists.txt  Mtv.cc  mtv.cpp
src/include/: Mtv.hh
